# doubly_linked_list_demo

./: .gitattributes  CMakeLists.txt  Makefile  README.md  dll_demo  generic_demo  generic_main.cpp  main.cpp
docs/: FLOWCHART_MAIN.md  LIST_OPERATIONS.md
include/: doubly_linked_list.hpp  ui.hpp
macos/Run Demo.app/Contents/: Info.plist
macos/Run Demo.app/Contents/MacOS/: Run Demo
macos/Run Interactive Demo.app/Contents/: Info.plist
macos/Run Interactive Demo.app/Contents/MacOS/: Run Interactive Demo
scripts/: Run_Educational_Demo.command  Run_Interactive_Demo_Tests.bat  Run_Interactive_Demo_Tests.command  Run_Interactive_Demo_Tests.ps1  Setup-Permissions.ps1  Setup_Permissions.command  bootstrap_mac.command
tests/: smoke.sh  test_dll_demo.sh  test_generic_repl.sh
